--- a/software/doom/src/CMakeLists.txt
+++ b/software/doom/src/CMakeLists.txt
@@ -11,9 +11,152 @@ find_package(common)
 enable_language(C ASM CXX)
 collect(PROJECT_LIB_DEPS xilstandalone;xiltimer;gloss)
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 collect(PROJECT_LIB_DEPS xil)
 collect(PROJECT_LIB_DEPS gcc)
 collect(PROJECT_LIB_DEPS c)
+
+aux_source_directory(${CMAKE_SOURCE_DIR}/doomgeneric/core _doomgeneric_sources)
+set(_sources ${_sources} ${_doomgeneric_sources})
 
 aux_source_directory(${CMAKE_SOURCE_DIR} _sources)
 foreach (source ${_sources})
