--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 build/
 sim/
 *.xsa
+.vscode/
 
 # gitignore template for Xilinx Vivado Design Suite
 # website: https://www.xilinx.com/support/download.html
