Send display command using IO registers
commit 9373e06bc045ce258d559c4398e63d77668d8009
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Mon Mar 31 19:05:38 2025 -0700

    successfully send command to GPU from CPU

commit 13d4f0b2c65ca3efd46eb3965394343575b617b9
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Mon Mar 31 00:34:32 2025 -0700

    test GPU standalone with JTAG to AXI peripheral

commit ce49062d8fb3cca17faa3d041efaaee93a423fd4
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Sun Mar 30 21:45:36 2025 -0700

    fix data alignment for sh/sb instruction

commit 2dd72c7c369ad6820bfbe47153cfa4049b7d5dbf
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Sat Mar 29 15:47:23 2025 -0700

    linker start PC

commit 297bb4e2adbddf1f74c4f10ffe14cfa4799e5597
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Sat Mar 29 14:00:03 2025 -0700

    remove extern vars in header

commit 3325d5fd8173ff31d9fbf8707b6eb5d9a4a74b85
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Sat Mar 29 12:04:32 2025 -0700

    call rectangle display command from CPU

commit ef3e7d45d9567d7fddf4461aff31b58903282f92
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Sat Mar 29 01:37:40 2025 -0700

    WIP

commit f9d14d9519c38af9bbd2d4b8b5b9916b1f26055f
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Fri Mar 28 23:56:15 2025 -0700

    implement command decoder

commit cab31c51dcb4fd62b88fbc2bb6950f35c13815f7
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Fri Mar 28 07:34:02 2025 -0700

    fix rectangle pixel off by one

--- a/vitis/test-platform/hw/sdt/pl.dtsi
+++ b/vitis/test-platform/hw/sdt/pl.dtsi
@@ -200,6 +200,7 @@
 			xlnx,ip-name = "GpuTop";
 			xlnx,edk-iptype = "PERIPHERAL";
 			reg = <0xc0000000 0x1000>;
+			xlnx,init-file = "/home/maxwelljung/programming/fpga-gpu/build/gputest.mem";
 			xlnx,name = "GpuTop_0";
 		};
 		axi_gpio_0: gpio@40000000 {
