--- a/vitis/test-platform/microblaze_riscv_0/standalone_microblaze_riscv_0/bsp/hw_artifacts/microblaze_riscv_0_baremetal.dts
+++ b/vitis/test-platform/microblaze_riscv_0/standalone_microblaze_riscv_0/bsp/hw_artifacts/microblaze_riscv_0_baremetal.dts
@@ -237,6 +237,7 @@
                         xlnx,ip-name = "GpuTop";
                         xlnx,edk-iptype = "PERIPHERAL";
                         reg = <0xc0000000 0x1000>;
+                        xlnx,init-file = "/home/maxwelljung/programming/fpga-gpu/build/gputest.mem";
                         xlnx,name = "GpuTop_0";
                         phandle = <0xa>;
                 };
