Compile Gpu with Verilator and STL
commit c08f0f9737704b3085899e2e498c8615d1cb442c
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Sat Apr 5 00:41:50 2025 -0700

    run SDL

commit b2baed57a194114f8304f7bba15808e812816a9a
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Fri Apr 4 22:20:01 2025 -0700

    compile with verilator

commit 5b6dbec421dabab8578b906cfce5ec0374a468d3
Author: Maxwell Jung <jungmaxwell@gmail.com>
Date:   Fri Apr 4 21:24:51 2025 -0700

    camelcase filenames

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ sim/
 dump.vcd
 vivado/
 a.out
+obj_dir/
 
 # gitignore template for Xilinx Vivado Design Suite
 # website: https://www.xilinx.com/support/download.html
