feat: working DMA transfer to heap

--- a/vitis/platform/microblaze_riscv_0/standalone_microblaze_riscv_0/bsp/hw_artifacts/microblaze_riscv_0_baremetal.dts
+++ b/vitis/platform/microblaze_riscv_0/standalone_microblaze_riscv_0/bsp/hw_artifacts/microblaze_riscv_0_baremetal.dts
@@ -234,33 +234,30 @@
                 axi_dma_0: dma@41e00000 {
                         compatible = "xlnx,axi-dma-7.1", "xlnx,axi-dma-1.00.a";
                         xlnx,s2mm-data-width = <0x20>;
-                        xlnx,mm2s-burst-size = <0x10>;
+                        xlnx,mm2s-burst-size = <0x100>;
                         xlnx,m-axi-mm2s-data-width = <0x20>;
-                        clock-frequency = <0x5f5e100 0x5f5e100 0x5f5e100 0x5f5e100>;
+                        clock-frequency = <0x5f5e100 0x5f5e100>;
                         xlnx,num-s2mm-channels = <0x1>;
                         xlnx,dlytmr-resolution = <0x7d>;
                         xlnx,rable = <0x0>;
-                        xlnx,sg-length-width = <0xe>;
+                        xlnx,sg-length-width = <0x1a>;
                         xlnx,prmry-is-aclk-async = <0x0>;
                         xlnx,include-s2mm-sf = <0x1>;
                         #dma-cells = <0x1>;
                         xlnx,ip-name = "axi_dma";
                         xlnx,single-interface = <0x0>;
-                        xlnx,sg-include-stscntrl-strm;
+                        xlnx,sg-include-stscntrl-strm = <0x0>;
                         xlnx,include-s2mm-dre = <0x0>;
                         reg = <0x41e00000 0x10000>;
                         xlnx,addr-width = <0x20>;
-                        xlnx,include-s2mm = <0x1>;
+                        xlnx,include-s2mm = <0x0>;
                         clocks = <&clk_bus_0>,
-                         <&clk_bus_0>,
-                         <&clk_bus_0>,
                          <&clk_bus_0>;
                         xlnx,s-axis-s2mm-tdata-width = <0x20>;
                         xlnx,micro-dma = <0x0>;
                         xlnx,increase-throughput = <0x0>;
                         xlnx,mm2s-data-width = <0x20>;
                         xlnx,addrwidth = <0x20>;
-                        xlnx,include-sg;
                         xlnx,sg-use-stsapp-length = <0x0>;
                         xlnx,m-axis-mm2s-tdata-width = <0x20>;
                         xlnx,edk-iptype = "PERIPHERAL";
@@ -270,7 +267,7 @@
                         xlnx,enable-multi-channel = <0x0>;
                         status = "okay";
                         xlnx,include-mm2s-sf = <0x1>;
-                        clock-names = "s_axi_lite_aclk", "m_axi_sg_aclk", "m_axi_mm2s_aclk", "m_axi_s2mm_aclk";
+                        clock-names = "s_axi_lite_aclk", "m_axi_sg_aclk", "m_axi_mm2s_aclk";
                         xlnx,include-mm2s = <0x1>;
                         xlnx,include-mm2s-dre = <0x0>;
                         xlnx,name = "axi_dma_0";
@@ -282,14 +279,6 @@
                                 compatible = "xlnx,axi-dma-mm2s-channel";
                                 dma-channels = <0x1>;
                                 phandle = <0x13>;
-                        };
-
-                        dma_channel_41e00030: dma-channel@41e00030 {
-                                xlnx,datawidth = <0x20>;
-                                xlnx,device-id = <0x0>;
-                                compatible = "xlnx,axi-dma-s2mm-channel";
-                                dma-channels = <0x1>;
-                                phandle = <0x14>;
                         };
                 };
 
@@ -509,7 +498,7 @@
                         xlnx,s-axi-ctrl-data-width = <0x20>;
                         xlnx,bram-awidth = <0x20>;
                         xlnx,lmb-awidth = <0x20>;
-                        phandle = <0x15>;
+                        phandle = <0x14>;
                 };
 
                 microsd_axi_quad_spi_0: axi_quad_spi@44a00000 {
@@ -611,7 +600,6 @@
                 microblaze_riscv_0_axi_intc = "/amba_pl/interrupt-controller@41200000";
                 axi_dma_0 = "/amba_pl/dma@41e00000";
                 dma_channel_41e00000 = "/amba_pl/dma@41e00000/dma-channel@41e00000";
-                dma_channel_41e00030 = "/amba_pl/dma@41e00000/dma-channel@41e00030";
                 axi_gpio_0 = "/amba_pl/gpio@40000000";
                 axi_gpio_1 = "/amba_pl/gpio@40010000";
                 axi_gpu_axi_bram_ctrl_0 = "/amba_pl/axi_bram_ctrl@c0000000";
